Tentativa de correção da primeira imagem que sumiu :/

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <h2 class="titleproject">Projetos</h2>
                         <ul class="projectlist">
                             <li>
-                                <img class="app-screenshot-wide" src="images/projects/Keep writing.PNG" alt="Keep Writing tela inicial">
+                                <img class="app-screenshot-wide" src="images/projects/Keep writing.png" alt="Keep Writing tela inicial">
 							    <h4 class="titleprojectlist"><a href="#">GAX16</a></h4>
 							    <p class="textprojectitem">O GAX16 surgiu com a idéia de organizar setores onde é necessário controlar a ordem de atendimento de cada colaborador do estabelecimento.
 								<br>
