Adiconado o printscreen do aplicativo Barbearia Pinheiro

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <h2 class="titleproject">Projetos</h2>
                         <ul class="projectlist">
                             <li>
-                                <img class="app-screenshot-wide" src="images/projects/Keep writing.png" alt="Keep Writing tela inicial">
+                                <img class="app-screenshot-wide" src="images/projects/Keep note.png" alt="Keep Writing tela inicial">
 							    <h4 class="titleprojectlist"><a href="#">GAX16</a></h4>
 							    <p class="textprojectitem">O GAX16 surgiu com a idéia de organizar setores onde é necessário controlar a ordem de atendimento de cada colaborador do estabelecimento.
 								<br>
@@ -50,7 +50,7 @@
 							    </p>
                             </li>
                             <li class="Project-item">
-                                    <img class="app-screenshot-portrait" src="images/projects/Keep note.png" alt="Keep note tela inicial">
+                                    <img class="app-screenshot-portrait" src="images/projects/Barbearia Pinheiro.jpg" alt="Keep note tela inicial">
                                     <h4 class="titleprojectlist"><a href="#">Barbearia Pinheiro</a></h4>
                                     <p class="textprojectitem">Com o Barbearia Pinheiro a idéia foi criar um app de agendamento simples.
                                     <br>
