--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <h2 class="titleproject">Projetos</h2>
                         <ul class="projectlist">
                             <li>
-                                <img class="app-screenshot-wide" src="images/projects/Keep note.png" alt="Keep Writing tela inicial">
+                                <img class="app-screenshot-wide" src="images/projects/GAX16.jpg" alt="Keep Writing tela inicial">
 							    <h4 class="titleprojectlist"><a href="#">GAX16</a></h4>
 							    <p class="textprojectitem">O GAX16 surgiu com a idéia de organizar setores onde é necessário controlar a ordem de atendimento de cada colaborador do estabelecimento.
 								<br>
