--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <ul class="projectlist">
                             <li>
                                 <img class="app-screenshot-wide" src="images/projects/GAX16.jpg" alt="Keep Writing tela inicial">
-							    <h4 class="titleprojectlist"><a href="#">GAX16</a></h4>
+							    <h4 class="titleprojectlist"><a href="gax16.html">GAX16</a></h4>
 							    <p class="textprojectitem">O GAX16 surgiu com a idéia de organizar setores onde é necessário controlar a ordem de atendimento de cada colaborador do estabelecimento.
 								<br>
 								Quando comecei a desenvolver o GAX16 tive a oportunidade de aperfeiçoar meus conhecimentos ao utilizar códigos que possibilitavam a sintetização de voz, uso de banco de dados MySQL em rede e a línguagem C#.
