--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             </li>
                             <li class="Project-item">
                                     <img class="app-screenshot-portrait" src="images/projects/Barbearia Pinheiro.jpg" alt="Keep note tela inicial">
-                                    <h4 class="titleprojectlist"><a href="#">Barbearia Pinheiro</a></h4>
+                                    <h4 class="titleprojectlist"><a href="barbeariapinheir.html">Barbearia Pinheiro</a></h4>
                                     <p class="textprojectitem">Com o Barbearia Pinheiro a idéia foi criar um app de agendamento simples.
                                     <br>
                                     Com o desenvolvimento do Barbearia Pinheiro aprendi muitas coisas que me ajudaram em vários momentos, como, uso de entidades, login externo usando o Facebook entre outros. 
