--- a/barbeariapinheir.html
+++ b/barbeariapinheir.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Projeto GAX16</title>
+    <title>Projeto Barbearia Pinheiro</title>
 </head>
 <body>
     
