--- a/partypage.html
+++ b/partypage.html
@@ -12,7 +12,7 @@
         }
         #demo{
             text-align: center;
-            font-size: 60px;
+            font-size: 49px;
         }
         #demo2{
             text-align: center;
@@ -64,5 +64,8 @@
             }
         }, 1000);
     </script>
+    <footer>
+        <div style="text-align: center;"> &copy; Ismael Ribeiro Moura, 2019, São Paulo - SP - Brazil</div>
+    </footer>
 </body>
 </html>
