--- a/partypage.html
+++ b/partypage.html
@@ -25,7 +25,7 @@
         <!-- Display the countdown timer in an element -->
         <p id="demo"></p>
         <div></div>
-        <p id="demo2">Em breve em Fortaleza-CE S2 by Ismael Ribeiro Moura</p>
+        <p id="demo2">Breve em Fortaleza-CE S2 by Ismael Ribeiro Moura</p>
     </container>
     <!--  -->
     <script>
