--- a/partypage.html
+++ b/partypage.html
@@ -18,6 +18,9 @@
             text-align: center;
             font-size: 30px;
         }
+        #rodape{
+            font-size: 15px;
+        }
     </style>
 </head>
 <body id="b1">
@@ -65,7 +68,7 @@
         }, 1000);
     </script>
     <footer>
-        <div style="text-align: center;"> &copy; Ismael Ribeiro Moura, 2019, São Paulo - SP - Brazil</div>
+        <div id="rodape" style="text-align: center;"> &copy; Ismael Ribeiro Moura, 2019, São Paulo - SP - Brazil</div>
     </footer>
 </body>
 </html>
