--- a/index.html
+++ b/index.html
@@ -57,14 +57,9 @@
                                     O Barbearia Pinheiro utiliza o Firebase como banco de dados para guardar as informações de agendamento. 
                                     </p>
                             </li>
+                            <div>Links de teste :</div>
                             <li class="Project-item">
-                                    <img class="app-screenshot-portrait" src="images/projects/P1.png" alt="Keep note tela inicial">
-                                    <h4 class="titleprojectlist"><a href="partypage.html">Projeto de Teste</a></h4>
-                                    <p class="textprojectitem">Com o Barbearia Pinheiro a idéia foi criar um app de agendamento simples.
-                                    <br>
-                                    Com o desenvolvimento do Barbearia Pinheiro aprendi muitas coisas que me ajudaram em vários momentos, como, uso de entidades, login externo usando o Facebook entre outros. 
-                                    O Barbearia Pinheiro utiliza o Firebase como banco de dados para guardar as informações de agendamento. 
-                                    </p>
+                                    <h4 class="titleprojectlist"><a href="partypage.html">Contagem regressiva para chegar em Fortaleza-CE (21/12/2019)</a></h4>                                    
                             </li>                           
                         </ul>
                     </section>
