--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                                     O Barbearia Pinheiro utiliza o Firebase como banco de dados para guardar as informações de agendamento. 
                                     </p>
                             </li>
-                            <div>Links de teste :</div>
+                            <div></div>
+                            <div><strong>Links de teste :</strong></div>
                             <li class="Project-item">
                                     <h4 class="titleprojectlist"><a href="partypage.html">Contagem regressiva para chegar em Fortaleza-CE (21/12/2019)</a></h4>                                    
                             </li>                           
