Adicionada página com sintetização de voz

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="pt-BR">
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
@@ -56,20 +56,21 @@
                                     Com o desenvolvimento do Barbearia Pinheiro aprendi muitas coisas que me ajudaram em vários momentos, como, uso de entidades, login externo usando o Facebook entre outros. 
                                     O Barbearia Pinheiro utiliza o Firebase como banco de dados para guardar as informações de agendamento. 
                                     </p>
-                            </li>
-                            <div></div>
-                            <div><strong>Links de teste :</strong></div>
+                            </li>                            
                             <li class="Project-item">
-                                    <h4 class="titleprojectlist"><a href="partypage.html">Contagem regressiva para chegar em Fortaleza-CE (21/12/2019)</a></h4>                                    
+                                <div></div>
+                                <div><strong>Links de teste :</strong></div>
+                                <h4 class="titleprojectlist"><a href="partypage.html">Contagem regressiva para chegar em Fortaleza-CE (21/12/2019)</a></h4>
+                                <h4 class="titleprojectlist"><a href="texttospeech.html">Text to Speech</a></h4>
                             </li>                           
                         </ul>
                     </section>
             </aside>
             <footer>
                 <div> &copy; Ismael Ribeiro Moura, 2019, São Paulo - SP - Brazil</div>
-                <div>Code made by <a href="https://carlosgoering.github.io" title="Carlos Goering">Carlos Goering</a> from <a href="https://carlosgoering.github.io"                 title="Carlos Goering">carlosgoering.github.io</a></div>
-                <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/"                 title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
-				<div>Icons made by <a href="https://www.flaticon.com/authors/dave-gandy" title="Dave Gandy">Dave Gandy</a> from <a href="https://www.flaticon.com/"                 title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+                <div>Code made by <a href="https://carlosgoering.github.io" title="Carlos Goering">Carlos Goering</a> from <a href="https://carlosgoering.github.io" title="Carlos Goering">carlosgoering.github.io</a></div>
+                <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+				<div>Icons made by <a href="https://www.flaticon.com/authors/dave-gandy" title="Dave Gandy">Dave Gandy</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
             </footer>
         </div>
 	</body>
