Alteração simples de texto

--- a/partypage.html
+++ b/partypage.html
@@ -28,7 +28,7 @@
         <!-- Display the countdown timer in an element -->
         <p id="demo"></p>
         <div></div>
-        <p id="demo2">Breve em Fortaleza-CE S2 by Ismael Ribeiro Moura</p>
+        <p id="demo2">Breve em Fortaleza-CE</p>
     </container>
     <!--  -->
     <footer>
