--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             <li class="Project-item">
                                 <div></div>
                                 <div><strong>Links de teste :</strong></div>
-                                <h4 class="titleprojectlist"><a href="partypage.html">Contagem regressiva para chegar em Fortaleza-CE (21/12/2019)</a></h4>
+                                <h4 class="titleprojectlist"><a href="partypage.html">Contagem regressiva para chegar em São Paulo-SP (01/01/2020)</a></h4>
                                 <h4 class="titleprojectlist"><a href="texttospeech.html">Text to Speech</a></h4>
                             </li>                           
                         </ul>
