--- a/hostelforner.html
+++ b/hostelforner.html
@@ -68,7 +68,10 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
-            <!-- @RenderBody() -->
+            <div class="text-center">
+                <h1 class="display-4">Seja bem-vindo</h1>
+                <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+            </div>
         </main>
     </div>
 
@@ -77,9 +80,10 @@
             &copy; 2020 - Hostel Forner - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
-    <script src="lib/jquery/dist/jquery.min.js"></script>
+    <!-- <script src="lib/jquery/dist/jquery.min.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/site.js" asp-append-version="true"></script>
-    <!-- @RenderSection("Scripts", required: false) -->
+    <script src="js/site.js"></script>
+    <script src="js/hostelforner/teste.js"></script>
 </body>
 </html>
