Alterações na tela Wardrobe

--- a/hostelforner/laundry/index.html
+++ b/hostelforner/laundry/index.html
@@ -129,7 +129,7 @@
                     <th>Nomes</th>
                 </tr>
             </tbody>
-        </table></div></br>
+        </table></br>
     </div>
     <footer class="border-top footer text-muted">
         <div class="container">
