--- a/hostelforner/wardrobe/index.html
+++ b/hostelforner/wardrobe/index.html
@@ -80,7 +80,11 @@
         </nav>
     </header>
     <div>
-        <table id="wardrobeTable">
+        <table id="wardrobe1">
+            <tbody>
+            </tbody>
+        </table></br>
+        <table id="wardrobe2">
             <tbody>
             </tbody>
         </table></br>
