Alteração de cor da tabela na tela refrigerator

--- a/hostelforner/refrigerator/index.html
+++ b/hostelforner/refrigerator/index.html
@@ -82,17 +82,17 @@
     <div>
         <table id="refrigerator1">
             <tbody>
-                <tr><td colspan="2" style="background-color: blue;">GELADEIRA I</td></tr>
+                <tr><td colspan="2" style="background-color: yellow;">GELADEIRA I</td></tr>
             </tbody>
         </table></br>
         <table id="refrigerator2">
             <tbody>
-                <tr><td colspan="2" style="background-color: blue;">GELADEIRA II</td></tr>
+                <tr><td colspan="2" style="background-color: yellow;">GELADEIRA II</td></tr>
             </tbody>
         </table></br>
         <table id="refrigerator3">
             <tbody>
-                <tr><td colspan="2" style="background-color: blue;">GELADEIRA III</td></tr>
+                <tr><td colspan="2" style="background-color: yellow;">GELADEIRA III</td></tr>
             </tbody>
         </table></br>
     </div>
