--- a/hostelforner/guest/index.html
+++ b/hostelforner/guest/index.html
@@ -66,14 +66,13 @@
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            <div class="text-center">
-                <h1 class="display-4">Seja bem-vindo</h1>
-            </div>
-        </main>
+    <div>
+        <table id="guestTable" class="table table-striped table-bordered" style="width:100%">
+            <th>
+                Nome
+            </th>
+        </table>
     </div>
-
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2020 - Hostel Forner - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
@@ -83,6 +82,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="../lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/site.js"></script>
-    <script src="../js/home/index.js"></script>
+    <script src="../js/guest/index.js"></script>
 </body>
 </html>
