--- a/hostelforner/laundry/index.html
+++ b/hostelforner/laundry/index.html
@@ -88,7 +88,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="dropdown09" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pesquisa</a>
                             <div class="dropdown-menu" aria-labelledby="dropdown09">
-                                <a class="dropdown-item" asp-area="" asp-controller="Search" asp-action="Aniversariantes">Aniversariantes</a>
+                                <a class="dropdown-item" asp-area="" href="../search/birthdays.html">Aniversariantes</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
