--- a/hostelforner/search/birthdays.html
+++ b/hostelforner/search/birthdays.html
@@ -6,19 +6,6 @@
     <title>Hostel Forner</title>
     <link rel="stylesheet" href="../lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="../css/site.css" />
-    <style>
-        table, th, td {
-            border: 1px solid #000;
-            text-align: center;
-            width: 500px;
-            height: 160px;
-            background-color: lightgray
-        }
-
-        th, td {
-            padding: 7px
-        }
-    </style>
 </head>
 <body>
     <header>
@@ -38,7 +25,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="dropdown07" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Controle</a>
                             <div class="dropdown-menu" aria-labelledby="dropdown07">
-                                <a class="dropdown-item" href="#">Hospedes</a>
+                                <a class="dropdown-item" href="../guest/index.html">Hospedes</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="Modalities" asp-action="Index">Modalidades</a>
                             </div>
                         </li>
@@ -79,25 +66,32 @@
             </div>
         </nav>
     </header>
-    <div>
-        <table id="wardrobe1">
-            <tbody>
-            </tbody>
-        </table></br>
-        <table id="wardrobe2">
-            <tbody>
-            </tbody>
-        </table></br>
-    </div>
+    <p>
+        Selecione o mês
+        <select id="selectMes" class="form-control">
+            <option value="0">Janeiro</option>
+            <option value="1">Fevereiro</option>
+            <option value="2">Março</option>
+            <option value="3">Abril</option>
+            <option value="4">Maio</option>
+            <option value="5">Junho</option>
+            <option value="6">Julho</option>
+            <option value="7">Agosto</option>
+            <option value="8">Setembro</option>
+            <option value="9">Outubro</option>
+            <option value="10">Novembro</option>
+            <option value="11">Dezembro</option>
+        </select>
+    </p>
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2020 - Hostel Forner - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
-    <!-- <script src="lib/jquery/dist/jquery.min.js"></script> -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="../lib/jquery/dist/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
     <script src="../lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/site.js"></script>
-    <script src="../js/wardrobe/index.js"></script>
+    <script src="../js/search/birthdays.js"></script>
 </body>
 </html>
