--- a/hostelforner/refrigerator/index.html
+++ b/hostelforner/refrigerator/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,7 +8,9 @@
     <link rel="stylesheet" href="../lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="../css/site.css" />
     <style>
-        table, th, td {
+        table,
+        th,
+        td {
             border: 1px solid #000;
             text-align: center;
             width: 500px;
@@ -15,18 +18,20 @@
             background-color: lightgray
         }
 
-        th, td {
+        th,
+        td {
             padding: 7px
         }
     </style>
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" href="#">Hostel Forner</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
@@ -36,26 +41,32 @@
                             <a class="nav-link text-dark" href="../home/index.html">Home</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="dropdown07" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Controle</a>
+                            <a class="nav-link dropdown-toggle" href="#" id="dropdown07" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">Controle</a>
                             <div class="dropdown-menu" aria-labelledby="dropdown07">
                                 <a class="dropdown-item" href="#">Hospedes</a>
-                                <a class="dropdown-item" asp-area="" asp-controller="Modalities" asp-action="Index">Modalidades</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Modalities"
+                                    asp-action="Index">Modalidades</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="dropdown08" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Financeiro</a>
+                            <a class="nav-link dropdown-toggle" href="#" id="dropdown08" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">Financeiro</a>
                             <div class="dropdown-menu" aria-labelledby="dropdown08">
-                                <a class="dropdown-item" asp-area="" asp-controller="Guest" asp-action="Index">Hospedes</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Guest"
+                                    asp-action="Index">Hospedes</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="dropdown09" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pesquisa</a>
+                            <a class="nav-link dropdown-toggle" href="#" id="dropdown09" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">Pesquisa</a>
                             <div class="dropdown-menu" aria-labelledby="dropdown09">
                                 <a class="dropdown-item" asp-area="" href="../search/birthdays.html">Aniversariantes</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="dropdown10" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Utilitarios</a>
+                            <a class="nav-link dropdown-toggle" href="#" id="dropdown10" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">Utilitarios</a>
                             <div class="dropdown-menu" aria-labelledby="dropdown10">
                                 <a class="nav-link text-dark" href="../laundry/index.html">Máquina de lavar</a>
                                 <a class="nav-link text-dark" href="../wardrobe/index.html">Armários</a>
@@ -63,15 +74,19 @@
                             </div>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="dropdown07" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Relatorios</a>
+                            <a class="nav-link dropdown-toggle" href="#" id="dropdown07" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">Relatorios</a>
                             <div class="dropdown-menu" aria-labelledby="dropdown07">
-                                <a class="dropdown-item" asp-area="" asp-controller="Guest" asp-action="Index">Hospedes</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Guest"
+                                    asp-action="Index">Hospedes</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="dropdown07" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Informacoes</a>
+                            <a class="nav-link dropdown-toggle" href="#" id="dropdown07" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">Informacoes</a>
                             <div class="dropdown-menu" aria-labelledby="dropdown07">
-                                <a class="dropdown-item" asp-area="" asp-controller="Guest" asp-action="Index">Hospedes</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Guest"
+                                    asp-action="Index">Hospedes</a>
                             </div>
                         </li>
                     </ul>
@@ -79,22 +94,32 @@
             </div>
         </nav>
     </header>
-    <div>
-        <table id="refrigerator1">
-            <tbody>
-                <tr><td colspan="2" style="background-color: yellow;">GELADEIRA I</td></tr>
-            </tbody>
-        </table></br>
-        <table id="refrigerator2">
-            <tbody>
-                <tr><td colspan="2" style="background-color: yellow;">GELADEIRA II</td></tr>
-            </tbody>
-        </table></br>
-        <table id="refrigerator3">
-            <tbody>
-                <tr><td colspan="2" style="background-color: yellow;">GELADEIRA III</td></tr>
-            </tbody>
-        </table></br>
+    <div class="container">
+        <main role="main" class="pb-3">
+            <div class="text-center">
+                <table id="refrigerator1">
+                    <tbody>
+                        <tr>
+                            <td colspan="2" style="background-color: yellow;">GELADEIRA I</td>
+                        </tr>
+                    </tbody>
+                </table></br>
+                <table id="refrigerator2">
+                    <tbody>
+                        <tr>
+                            <td colspan="2" style="background-color: yellow;">GELADEIRA II</td>
+                        </tr>
+                    </tbody>
+                </table></br>
+                <table id="refrigerator3">
+                    <tbody>
+                        <tr>
+                            <td colspan="2" style="background-color: yellow;">GELADEIRA III</td>
+                        </tr>
+                    </tbody>
+                </table></br>
+            </div>
+        </main>
     </div>
     <footer class="border-top footer text-muted">
         <div class="container">
@@ -107,4 +132,5 @@
     <script src="../js/site.js"></script>
     <script src="../js/refrigerator/index.js"></script>
 </body>
+
 </html>
