--- a/hostelforner/search/birthdays.html
+++ b/hostelforner/search/birthdays.html
@@ -115,6 +115,9 @@
                 </th>
             </tr>
         </thead>
+        <tbody>
+            
+        </tbody>
     </table>
     <footer class="border-top footer text-muted">
         <div class="container">
