--- a/hostelforner/search/birthdays.html
+++ b/hostelforner/search/birthdays.html
@@ -129,6 +129,7 @@
     <script src="../lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/site.js"></script>
     <script src="../js/search/birthdays.js"></script>
+    <script src="../js/moment.js"></script>
 </body>
 
 </html>
