--- a/calendar/index.html
+++ b/calendar/index.html
@@ -101,6 +101,9 @@
             <span></span>
             <span></span>
             <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
         </div>
     </div><!--WRAPER-->
     <!--  -->
@@ -199,7 +202,7 @@
         let elnov = document.querySelector('#nov');
         let eldez = document.querySelector('#dez');
         //
-        for (i = 1; i <= 31; i++) {
+        for (i = 4; i <= 31; i++) {
             elago.innerHTML += `<span>${i}</span>`;
         }
 
