--- a/calendar/index.html
+++ b/calendar/index.html
@@ -203,7 +203,7 @@
         let eldez = document.querySelector('#dez');
         //
         for (i = 4; i <= 31; i++) {
-            elago.innerHTML += `<span>${i}</span>`;
+            elago.innerHTML += `<span style="color: red">${i}</span>`;
         }
 
         for (i = 1; i <= 30; i++) {
