--- a/calendar/index.html
+++ b/calendar/index.html
@@ -42,7 +42,7 @@
             font-weight: bold;
             display: block;
             text-align: center;
-            margin: 0 auto;
+            margin: 10px auto;
             background-color: blueviolet;
             max-width: 700px;
             border-radius: 8px;
