--- a/calendar/index.html
+++ b/calendar/index.html
@@ -272,6 +272,9 @@
                 case 5:
                     eldez.innerHTML += `<span style="color: ${getColorForDate(2024, 12, i)}">${"❤️"}</span>`;
                     break;
+                case 30:
+                    eldez.innerHTML += `<span style="color: ${getColorForDate(2024, 12, i)}">${"🎂"}</span>`;
+                    break;
                 default:
                     eldez.innerHTML += `<span style="color: ${getColorForDate(2024, 12, i)}">${i}</span>`;
                     break;
