--- a/calendar/index.html
+++ b/calendar/index.html
@@ -250,16 +250,23 @@
         }
 
         for (i = 1; i <= 31; i++) {
-            elout.innerHTML += `<span style="color: ${getColorForDate(2024, 10, i)}">${i == 5 ? "❤️" : i}</span>`;
+            switch (i) {
+                case 5:
+                    elout.innerHTML += `<span style="color: ${getColorForDate(2024, 10, i)}">${"❤️"}</span>`;
+                    break;
+                case 31:
+                    elout.innerHTML += `<span style="color: ${getColorForDate(2024, 10, i)}">${"✈️"}</span>`;
+                    break;
+                default:
+                    elout.innerHTML += `<span style="color: ${getColorForDate(2024, 10, i)}">${i}</span>`;
+                    break;
+            }
         }
 
         for (i = 1; i <= 30; i++) {
             switch (i) {
                 case 5:
                     elnov.innerHTML += `<span style="color: ${getColorForDate(2024, 11, i)}">${"❤️"}</span>`;
-                    break;
-                case 29:
-                    elnov.innerHTML += `<span style="color: ${getColorForDate(2024, 11, i)}">${"✈️"}</span>`;
                     break;
                 default:
                     elnov.innerHTML += `<span style="color: ${getColorForDate(2024, 11, i)}">${i}</span>`;
@@ -282,7 +289,7 @@
         }
 
         // Define a data alvo para a contagem regressiva
-        const targetDate = new Date('November 29, 2024 13:10:00').getTime();
+        const targetDate = new Date('Octuber 31, 2024 18:40:00').getTime();
 
         // Atualiza a contagem regressiva a cada segundo
         const countdown = setInterval(() => {
